@@ -62,7 +62,7 @@ class LogPerformance(Node):
         super(LogPerformance, self).finalize(ctx)
 
         current = time.time()
-        logger.info("Context expression cache usage - size: %d evictions: %d hits/misses: %d/%d" %
+        logger.debug("Context expression cache usage - size: %d evictions: %d hits/misses: %d/%d" %
                     (ctx._compiled.size, ctx._compiled.evictions, ctx._compiled.hits, ctx._compiled.misses))
         logger.info("Total time: %d  Total messages: %d  Global rate: %.3f msg/s" % (
                     current - self._startTime,
