@@ -8,9 +8,11 @@ simplejson>=3.6.5
 dateutils>=0.6.6
 slugify>=0.0.1
 BeautifulSoup>=3.2.1
+beautifulsoupselect>=0.2
 chardet>=2.3.0
 incf.countryutils>=1.0
 incf.dai>=0.7
 psutil>=2.2.0
 ua-parser>=0.3.6
 user-agents>=0.3.2
+lxml>=3.4.2
